--- a/node/views/index.handlebars
+++ b/node/views/index.handlebars
@@ -1,133 +1,137 @@
 <!DOCTYPE html>
 
-<head>
+<html>
 
-    <title>Hardware Exchange</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link href="../css/style.css" rel="stylesheet" type="text/css">
-    <link href="../css/queries.css" rel="stylesheet" type="text/css">
-    
-    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="../js/script.js"></script>
-    
-</head>
+    <head>
 
-<body>
-
-    <header class="header">      
+        <title>Hardware Exchange</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <nav>
+        <link href="../css/style.css" rel="stylesheet" type="text/css">
+        <link href="../css/queries.css" rel="stylesheet" type="text/css">
+        
+        <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="../js/script.js"></script>
+        
+    </head>
+
+    <body>
+
+        <header class="header">      
             
-            <div class="row">
+            <nav>
                 
-                <div id="page-header-text"><a href="/">hardware <span class="orange">exchange</span></a></div>
-                <ul class="main-nav">
-                    <li><a href="/register">Register</a></li>
-                    <li><a href="/login">Log in</a></li>
-                    <li><div class="hamburger-menu"></div></li>
-                </ul>   
- 
-            </div>
+                <div class="row">
+                    
+                    <div id="page-header-text"><a href="/">hardware <span class="orange">exchange</span></a></div>
+                    <ul class="main-nav">
+                        <li><a href="/register">Register</a></li>
+                        <li><a href="/login">Log in</a></li>
+                        <li><div class="hamburger-menu"></div></li>
+                    </ul>   
+    
+                </div>
 
-        </nav>
+            </nav>
+            
+                
+            <div class="row main-search">
+                <input type="text" placeholder="Find hardware" class="search-box-main" required>
+                <button class="btn-search"><img src="img/icons/search.svg"></button> 
+            </div>
+            
+        </header>
+        
+        
+        <div class="row"><h2>Recent Additions</h2></div>
+        
+
+        <section class="images">
+            <div class="row">
+                <div class="img-box">
+                    <img src="img/placeholders/download.jpeg">
+                    <div class="title-info">
+                        <p class="img-title">Testing</p>
+                        <p class="status-box">CPU</p>
+                    </div>
+                    <p class="img-desc">This is a test of a longer description for an item on the site</p>
+                </div>
+                <div class="img-box">
+                    <img src="img/placeholders/download.jpeg">
+                    <div class="title-info">
+                        <p class="img-title">Testing</p>
+                        <p class="status-box">CPU</p>
+                    </div>
+                    <p class="img-desc">This is a test of a longer description for an item on the site</p>
+                </div>
+                <div class="img-box">
+                    <img src="img/placeholders/download.jpeg">
+                    <div class="title-info">
+                        <p class="img-title">Testing</p>
+                        <p class="status-box">CPU</p>
+                    </div>
+                    <p class="img-desc">This is a test of a longer description for an item on the site</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="img-box">
+                    <img src="img/placeholders/download.jpeg">
+                    <div class="title-info">
+                        <p class="img-title">Testing</p>
+                        <p class="status-box">CPU</p>
+                    </div>
+                    <p class="img-desc">This is a test of a longer description for an item on the site</p>
+                </div>
+                <div class="img-box">
+                    <img src="img/placeholders/download.jpeg">
+                    <div class="title-info">
+                        <p class="img-title">Testing</p>
+                        <p class="status-box">CPU</p>
+                    </div>
+                    <p class="img-desc">This is a test of a longer description for an item on the site</p>
+                </div>
+                <div class="img-box">
+                    <img src="img/placeholders/download.jpeg">
+                    <div class="title-info">
+                        <p class="img-title">Testing</p>
+                        <p class="status-box">CPU</p>
+                    </div>
+                    <p class="img-desc">This is a test of a longer description for an item on the site</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="img-box">
+                    <img src="img/placeholders/download.jpeg">
+                    <div class="title-info">
+                        <p class="img-title">Testing</p>
+                        <p class="status-box">CPU</p>
+                    </div>
+                    <p class="img-desc">This is a test of a longer description for an item on the site</p>
+                </div>
+                <div class="img-box">
+                    <img src="img/placeholders/download.jpeg">
+                    <div class="title-info">
+                        <p class="img-title">Testing</p>
+                        <p class="status-box">CPU</p>
+                    </div>
+                    <p class="img-desc">This is a test of a longer description for an item on the site</p>
+                </div>
+                <div class="img-box">
+                    <img src="img/placeholders/download.jpeg">
+                    <div class="title-info">
+                        <p class="img-title">Testing</p>
+                        <p class="status-box">CPU</p>
+                    </div>
+                    <p class="img-desc">This is a test of a longer description for an item on the site</p>
+                </div>
+            </div>
         
             
-        <div class="row main-search">
-            <input type="text" placeholder="Find hardware" class="search-box-main" required>
-            <button class="btn-search"><img src="img/icons/search.svg"></button> 
-        </div>
+        </section> 
         
-    </header>
-    
-    
-    <div class="row"><h2>Recent Additions</h2></div>
-    
+    </body>
 
-    <section class="images">
-        <div class="row">
-            <div class="img-box">
-                <img src="img/placeholders/download.jpeg">
-                <div class="title-info">
-                    <p class="img-title">Testing</p>
-                    <p class="status-box">CPU</p>
-                </div>
-                <p class="img-desc">This is a test of a longer description for an item on the site</p>
-            </div>
-            <div class="img-box">
-                <img src="img/placeholders/download.jpeg">
-                <div class="title-info">
-                    <p class="img-title">Testing</p>
-                    <p class="status-box">CPU</p>
-                </div>
-                <p class="img-desc">This is a test of a longer description for an item on the site</p>
-            </div>
-            <div class="img-box">
-                <img src="img/placeholders/download.jpeg">
-                <div class="title-info">
-                    <p class="img-title">Testing</p>
-                    <p class="status-box">CPU</p>
-                </div>
-                <p class="img-desc">This is a test of a longer description for an item on the site</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="img-box">
-                <img src="img/placeholders/download.jpeg">
-                <div class="title-info">
-                    <p class="img-title">Testing</p>
-                    <p class="status-box">CPU</p>
-                </div>
-                <p class="img-desc">This is a test of a longer description for an item on the site</p>
-            </div>
-            <div class="img-box">
-                <img src="img/placeholders/download.jpeg">
-                <div class="title-info">
-                    <p class="img-title">Testing</p>
-                    <p class="status-box">CPU</p>
-                </div>
-                <p class="img-desc">This is a test of a longer description for an item on the site</p>
-            </div>
-            <div class="img-box">
-                <img src="img/placeholders/download.jpeg">
-                <div class="title-info">
-                    <p class="img-title">Testing</p>
-                    <p class="status-box">CPU</p>
-                </div>
-                <p class="img-desc">This is a test of a longer description for an item on the site</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="img-box">
-                <img src="img/placeholders/download.jpeg">
-                <div class="title-info">
-                    <p class="img-title">Testing</p>
-                    <p class="status-box">CPU</p>
-                </div>
-                <p class="img-desc">This is a test of a longer description for an item on the site</p>
-            </div>
-            <div class="img-box">
-                <img src="img/placeholders/download.jpeg">
-                <div class="title-info">
-                    <p class="img-title">Testing</p>
-                    <p class="status-box">CPU</p>
-                </div>
-                <p class="img-desc">This is a test of a longer description for an item on the site</p>
-            </div>
-            <div class="img-box">
-                <img src="img/placeholders/download.jpeg">
-                <div class="title-info">
-                    <p class="img-title">Testing</p>
-                    <p class="status-box">CPU</p>
-                </div>
-                <p class="img-desc">This is a test of a longer description for an item on the site</p>
-            </div>
-        </div>
-    
-        
-    </section> 
-    
-</body>
+</html>
