--- a/node/public/css/style.css
+++ b/node/public/css/style.css
@@ -119,7 +119,7 @@ nav .row {padding-top: 45px; }
 .btn-search {
     
     background-color: #e07519;
-    height: auto;
+    height: 62px;
     width: 62px;
     margin-left: -5px;
     border: none;
@@ -131,6 +131,7 @@ nav .row {padding-top: 45px; }
 .main-search {
     
     margin-top: 50vh;
+    transform: translate(0, -50%);
     height: 62px;
     
 }
