--- a/node/views/account.handlebars
+++ b/node/views/account.handlebars
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="btn-holder"><button id="btn-add-item">Add item</button></div>
+                    <div class="btn-holder"><button class="sub-btn" onclick="document.location.href='/addItem'">Add item</button></div>
                 </div>
 
             </div>
