--- a/node/public/css/addItem.css
+++ b/node/public/css/addItem.css
@@ -7,10 +7,12 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
     font-size: 20px;
+    overflow-x: hidden;
     font-family: 'Roboto', sans-serif;
     height: 100%;
+    width: 100%;
 }
 
 a {text-decoration: none; }
@@ -45,7 +47,13 @@ a {text-decoration: none; }
     padding: 15px;
 }
 
+.center-box {
 
+    margin-left: 50%;
+    margin-top: 10%;
+    transform: translate(-50%);
+    display: inline-block;
+}
 
 
 /* -------- Navigation -------- */
@@ -81,7 +89,6 @@ nav {background-color: #000; }
 
 /* -------- Mobile Navigation -------- */
 
-
 .hamburger-menu {
     width: 40px;
     height: auto;
@@ -96,19 +103,19 @@ nav {background-color: #000; }
     transform: scale(1.15);
 }
 
-
 /* -------- Item submit form -------- */
 
-.center-box {
 
-    margin-left: 15%;
-    margin-top: 5%;
-    transform: translate(-50%);
-    display: inline-block;
+.form-title {
+    font-size: 140%;
+    padding: 8px;
+    text-align: center;
+    margin: 0 0 50px 50%;
+    transform: translate(-50%, 0);
 }
 
 .input-box {
-    margin-bottom: 40px;
+    margin-bottom: 70px;
 }
 
 .input-box p {
@@ -116,8 +123,15 @@ nav {background-color: #000; }
     color: #777;
 }
 
+.input-box textarea {
+    padding: 15px;
+    width: 640px;
+    height: 300px;
+}
+
 input[type='text'], select {
     width: 100%;
+    float: left;
 }
 
 .sub-btn {
@@ -129,7 +143,7 @@ input[type='text'], select {
     border-radius: 10px;
     transition: transform 0.3s;
     cursor: pointer;
-    margin-top: 60px;
+    margin: 60px 0 40px 0; 
 }
 
 .sub-btn:hover {
