--- a/node/public/css/login.css
+++ b/node/public/css/login.css
@@ -7,7 +7,7 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
     height: 100%;
