--- a/node/views/addItem.handlebars
+++ b/node/views/addItem.handlebars
@@ -13,37 +13,40 @@
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="../js/script.js"></script>
+        
         
     </head>
 
     <body>
 
         <header>
-            
+        
             <nav>
-                
+            
                 <div class="row">
-                    
+                
                     <div id="page-header-text"><a href="/">hardware <span class="orange">exchange</span></a></div>
                     <ul class="main-nav">
-                        <li><a href="/login">Log in</a></li>
+
+                        <li><a href="/login">Log in </a></li>
                         <li><a href="/register">Register</a></li>
                         <li><div class="hamburger-menu"></div></li>
                     </ul>   
-    
+ 
                 </div>
 
             </nav>
-            
+        
         </header>
 
-
+        
         <div class="center-box">
 
+            <p class="form-title">Add item</p>
+
+            <!-- the form to add the item to the server -->
+
             <form method="post" action="/addItem">
-                
                 <div class="input-box">
                     <p>Title:</p>                   
                     <input type="text" name="title" required>
@@ -51,12 +54,12 @@
 
                 <div class="input-box">
                     <p>Description:</p>                    
-                    <textarea rows="12" cols="60" placeholder="Add a description..."></textarea>
+                    <textarea name="description" placeholder="Add a description..."></textarea>
                 </div>
 
                 <div class="input-box">
                     <p>Item type:</p>
-                    <select>
+                    <select name="itemType">
                         <option value="cpu">CPU</option>
                         <option value="gpu">Graphics Card</option>
                         <option value="ram">RAM</option>
@@ -75,7 +78,8 @@
         </div>
         
 
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="../js/script.js"></script>
 
     </body>
 
