--- a/node/public/css/login.css
+++ b/node/public/css/login.css
@@ -7,6 +7,10 @@
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    display: none;
+}
+
 html, body {
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
